findbugs DM_NUMBER_CTOR
git-svn-id: https://svn.code.sf.net/p/autoplot/code/autoplot/trunk@7911 0c594bb0-8543-0410-a25e-d8ec440261db